--- a/src/tag/scss/variable.scss
+++ b/src/tag/scss/variable.scss
@@ -25,6 +25,16 @@ $tag-size-m-height: $s-7 !default;
 /// @namespace size/bounding
 $tag-size-s-height: $s-5 !default;
 
+/// spacing
+/// @namespace size/bounding
+$tag-size-l-spacing: $s-4 !default;
+/// spacing
+/// @namespace size/bounding
+$tag-size-m-spacing: $s-3 !default;
+/// spacing
+/// @namespace size/bounding
+$tag-size-s-spacing: $s-2 !default;
+
 /// padding (l, r)
 /// @namespace size/bounding
 $tag-size-l-padding-lr: $s-4 !default;
